...
    return AppBar(
      title: Image.asset(UIConstants.LOGO, width: 100, height: 40),
      actions: [
        Padding(
          padding: const EdgeInsets.symmetric(horizontal: 8.0),
          child: Tooltip(
            message: 'Search',
            child: IconButton(
              onPressed: (){
                Navigator.of(context).push(
                  MaterialPageRoute(builder: (_) => const SearchPokemonPage())
                );
              },
...
        backgroundColor: Theme.of(context).canvasColor,
        insetPadding: EdgeInsets.zero,
        contentPadding: const EdgeInsets.symmetric(vertical: 8.0),
        shape: const RoundedRectangleBorder(
          borderRadius:BorderRadius.all(Radius.circular(8.0)),
        ),
        title: Text('Pages', 
          style: Theme.of(context).textTheme.titleLarge!.copyWith(fontWeight: FontWeight.bold),
        ),
        content: SizedBox(
          height: height,
          width: width,
          child: ListView.builder(
...
