...
  }

  Widget buildScaffold(BuildContext context, SearchPokemonState state) {
    return Scaffold(
      appBar: AppBar(
        leading: IconButton(
          key: const Key('backButton'),
          onPressed: () => Navigator.of(context).pop(),
          icon: const Icon(Icons.arrow_back),
        ),
        title: TextField(
          autofocus: true,
          decoration: const InputDecoration.collapsed(
...
